--- a/test.tex
+++ b/test.tex
@@ -7,12 +7,7 @@
 
 \begin{document}
 
-\maketitle
-
-\section{Aufgabe 1}
-Mathe 
-$\sum_{\inf} ()$
-\section{Aufgabe 2}
-
+\LARGE\(M \cap (N \backslash P) = (M \cap N) \backslash P\)
+\(Beisp\)
 
 \end{document}
