--- a/mathematik_physiker/übung1.tex
+++ b/mathematik_physiker/übung1.tex
@@ -1,9 +1,11 @@
 \documentclass{article}
 
-%\usepackage[a4paper, total={16cm, 25cm}]{geometry}
+%\usepackage[a4paper, total={170mm,257mm}]{geometry}
+\usepackage[a4paper, top=2cm, bottom=3cm]{geometry}
 \usepackage{babel}[german]
 \usepackage{booktabs}
 \usepackage{mathtools}
+\usepackage{amssymb}
 \usepackage{enumitem}
 
 \date{21.10.2021}
@@ -15,7 +17,7 @@
     
     \section*{Aufgabe 1}
 
-        \subsection*{Aufgabe 1.1 i)}
+        \subsection*{Aufgabe 1.1 (i)}
 
         Es ist zu zeigen das \((M \Delta N) \Delta (N\Delta P) = M \Delta P\) gilt.
         \(A := (M \Delta N) \Delta (N\Delta P)\), \(B := M \Delta P\)
@@ -82,81 +84,108 @@
         in den Mengen verteilt sein kann, die Operationen A und B zum gleichen Ergebnis kommen, sind sie gleich.
 
 
-        \subsection*{Aufgabe 1.1 ii)}
+        \subsection*{Aufgabe 1.1 (ii)}
             \newtheorem{thm}{Theorem}
             \newtheorem{lemma}[thm]{Lemma}
             \subsubsection*{Hilfslemma 1: Weitere Definition der symmetrischen Differenz \( \Delta \)}
-                Zu zeigen: \(A \Delta B = (A \backslash B) \cup (B \backslash A) = (A \cup B) \backslash (A \cap B) \) \\
-                Füge beiden Seiten \( A \cap B \) hinzu. \\
-                \(\Rightarrow (A \backslash B ) \cup ( B \backslash A ) \cup ( A \cap B ) = ( A \cup B ) \backslash ( A \cap B ) \cup ( A \cap B ) \) \\
-                \(\Rightarrow (A \backslash B ) \cup ( B \backslash A ) \cup ( A \cap B ) = (A \cup B) \) \\
-                Mit Assoziativgesetz \(A \backslash (B \backslash C) = (A \backslash B) \cup (A \cap C) \) \\
-                \(\Rightarrow (A \backslash B ) \cup ( B \backslash (A \backslash A) ) = (A \cup B) \) \\
-                \(\Rightarrow (A \backslash B ) \cup B = (A \cup B) \) \\
-                \(\Rightarrow ( A \cup B ) = (A \cup B) \) \\
+                \begin{lemma}
+                    \begin{align*}
+                        \text{Zu zeigen:} \: A \Delta B = (A \backslash B) \cup (B \backslash A) &= (A \cup B) \backslash (A \cap B) \\
+                        \text{Füge beiden Seiten} &\: A \cap B \: \text{hinzu.} \\
+                        \Rightarrow (A \backslash B ) \cup ( B \backslash A ) \cup ( A \cap B ) &= ( A \cup B ) \backslash ( A \cap B ) \cup ( A \cap B ) \\
+                        \Rightarrow (A \backslash B ) \cup ( B \backslash A ) \cup ( A \cap B ) &= (A \cup B) \\
+                        \text{Mit Assoziativgesetz A} \backslash (B \backslash C) &= (A \backslash B) \cup (A \cap C) \\
+                        \Rightarrow (A \backslash B ) \cup ( B \backslash (A \backslash A) ) &= (A \cup B) \\
+                        \Rightarrow (A \backslash B ) \cup B &= (A \cup B) \\
+                        \Rightarrow (A \cup B) &= (A \cup B)
+                    \end{align*}
+                \end{lemma}
 
-            \subsubsection*{Eigentliche Aufgabe Finn}
-                Zu zeigen: \(M \cap (N \Delta P) = (M \cap N) \Delta (M \cap P) \) \\
-                \(M \cap (N \Delta P)\) \\
-                \indent \(\Downarrow \) Hilfslemma 1 \\
-                \[= M \cap ((N \cup P) \backslash (N \cap P))\] \\
-                \indent \(\Downarrow \) Anwenden des Distributivgesetzes \(A \cap (B \backslash C) = (A \cap B ) \backslash (A \cap C)\) \\
-                \(= (M \cap (N \cup P)) \backslash (M \cap N \cap \ P)\) \\
-                \indent \(\Downarrow \) Anwenden des Distributivgesetzes \(A \cap (B \cup C) = (A \cap B ) \cup (A \cap C)\) \\
-                \(=(M \cap N) \cup (M \cap P) \backslash (M \cap N) \cap (M \cap P)\) \\
-                \indent \(\Downarrow \) Hilfslemma 1 rückwärts\\
-                \(=(M \cap N) \Delta (M \cap P)\) \\
-                
-
+            \subsubsection*{Eigentliche Aufgabe}
+                \begin{align*}
+                    &\text{Zu zeigen:} \: M \cap (N \Delta P) = (M \cap N) \Delta (M \cap P) \\
+                    &M \cap (N \Delta P) \\
+                    &\indent \Downarrow \text{Hilfslemma 1} \\
+                    &= M \cap ((N \cup P) \backslash (N \cap P)) \\
+                    &\indent \Downarrow \text{Anwenden des Distributivgesetzes} A \cap (B \backslash C) = (A \cap B ) \backslash (A \cap C) \\
+                    &= (M \cap (N \cup P)) \backslash (M \cap N \cap \ P) \\
+                    &\indent \Downarrow text{Anwenden des Distributivgesetzes} A \cap (B \cup C) = (A \cap B ) \cup (A \cap C) \\
+                    &=(M \cap N) \cup (M \cap P) \backslash (M \cap N) \cap (M \cap P)\\
+                    &\indent \Downarrow \text{Hilfslemma 1 rückwärts}\\
+                    &=(M \cap N) \Delta (M \cap P)
+                \end{align*}
     
-    \subsection*{Aufgabe 1.2 i)}
-        \begin{tabular}{c c c c c c c}
-            A & B & \( A \lor B \) & \( \lnot ( A \lor B) \) & \( \lnot A \) & \( \lnot B \) & \( \lnot A \land \lnot B \) \\
-            \midrule
-            w & w & w & f & f & f & f\\
-            w & f & w & f & f & w & f\\
-            f & w & w & f & w & f & f\\
-            f & f & f & w & w & w & w\\
-        \end{tabular} \\
-        Die Spalten vier und sieben sind für alle Wertekombinationen von A und B gleich. \\
-        \( \Rightarrow \) \( \lnot ( A \lor B) \) und \( \lnot A \land \lnot B \) sind equivalent.
+        \subsection*{Aufgabe 1.2 (i)}
+            \begin{tabular}{c c c c c c c}
+                A & B & \( A \lor B \) & \( \lnot ( A \lor B) \) & \( \lnot A \) & \( \lnot B \) & \( \lnot A \land \lnot B \) \\
+                \midrule
+                w & w & w & f & f & f & f\\
+                w & f & w & f & f & w & f\\
+                f & w & w & f & w & f & f\\
+                f & f & f & w & w & w & w\\
+            \end{tabular} \\
+            Die Spalten vier und sieben sind für alle Wertekombinationen von A und B gleich. \\
+            \( \Rightarrow \) \( \lnot ( A \lor B) \) und \( \lnot A \land \lnot B \) sind equivalent.
 
-    \subsection*{Aufgabe 1.2 ii)}
+        \subsection*{Aufgabe 1.2 (ii)}
 
-        \begin{tabular}{c c c c c c c}
-            A & B & \( A \land B \) & \( \lnot ( A \land B ) \) & \( \lnot A \) & \( \lnot B \) & \( \lnot A \lor \lnot B \) \\
-            \midrule
-            w & w & w & f & f & f & f\\
-            w & f & f & w & f & w & w\\
-            f & w & f & w & w & f & w\\
-            f & f & f & w & w & w & w\\
-        \end{tabular} \\
-        Die Spalten vier und sieben sind für alle Wertekombinationen von A und B gleich. \\
-        \( \Rightarrow \) \( \lnot ( A \land B) \) und \( \lnot A \lor \lnot B \) sind equivalent.
+            \begin{tabular}{c c c c c c c}
+                A & B & \( A \land B \) & \( \lnot ( A \land B ) \) & \( \lnot A \) & \( \lnot B \) & \( \lnot A \lor \lnot B \) \\
+                \midrule
+                w & w & w & f & f & f & f\\
+                w & f & f & w & f & w & w\\
+                f & w & f & w & w & f & w\\
+                f & f & f & w & w & w & w\\
+            \end{tabular} \\
+            Die Spalten vier und sieben sind für alle Wertekombinationen von A und B gleich. \\
+            \( \Rightarrow \) \( \lnot ( A \land B) \) und \( \lnot A \lor \lnot B \) sind equivalent.
 
-    \subsection*{Aufgabe 1.4}
-        Gegeben \(M \not= \emptyset \), \(S:=\{x \in M | \text{x hat Sorgen}\} \), \(L:=\{x \in M | \text{x trinkt Likör}\} \) und \(\text{Likörproduzent} \in M\)
-        \subsubsection*{(a) \(\text{Wer Sorgen hat, trinkt Likör} = S \subset L \)}
-            \begin{enumerate}[label=(\roman*)]
-                \item \(\text{Wer Likör trinkt, hat Sorgen} = L \subset S\) Falsch
-                \item \(\text{Wer keiene Likör trinkt, hat keine Sorgen} = M \backslash L \subset M \backslash S\) Wahr
-                \item \(\text{Niemand hat Sorgen und trinkt keinen Likör} = S \cap (M \backslash L) = \emptyset\) Wahr
-                \item \(\text{Jemand hat Sorgen und trinkt keinen Likör} = S \cap (M \backslash L) \not= \emptyset\) Falsch
-                \item \(\text{Jemand trinkt Likör} = L \not= \emptyset\) Unbestimmt
-            \end{enumerate}
+        \subsection*{Aufgaben 1.3}
+            Seien \(A, B, C\) Mengen und \(f: A \rightarrow B, g: B \rightarrow C\) Abbildungen
+            \subsubsection*{Aufgabe 1.3 (i)}
+                Zu zeigen: \(g \circ f \: \text{surjektiv} \Rightarrow g \: \text{surjektiv}\)\\
+                Definition der Surjektivität: \\
+                Sei \(f: A \rightarrow B \land \text{f ist surjektiv} \Leftrightarrow \forall b \in B \: \exists a \in A \: f(a) = b\) \\
+                \(g\) ist surjektiv: \\
+                \(\forall c \in C \: \exists b \in B: g(b) = c\) \\
+                \(g \circ f\) ist surjektiv: \\
+                \(\forall c \in C \: \exists a \in A \: g : g \circ f(a) = c\) \\
+                Man setze für \(b = f(a) \: \text{mit} \: a \in A \) ein.
+                Es gilt nach Vorraussetzung \(f(a) \in B\).
+            
+            \subsubsection*{Aufgabe 1.3 (ii)}
+                Zu zeigen: \(g \circ f\) injektiv \(\Rightarrow f\) injektiv \\
+                \(\forall a_1, a_2 \in A: g \circ f(a_1) = g \circ f(a_2) \Leftrightarrow a_1 = a_2\) \\
+                \(\Rightarrow \forall a_1, a_2 \in A: f(a_1) = b_1 \: f(a_2) = b_2 \: g(b_1) = c_1 \: g(b_2) = c_2: a_1 = a_2 \Leftrightarrow c_1 = c_2\) \\
+                Angenommen für \(a_1 = a_2 \land b_1 \neq b_2\) \\
+                \(\Rightarrow c_1 \neq c_2\) \\
+                Das ist ein Wiederspruch da \(g \circ f\) injektiv ist \\
+                Es folgt \(f\) ist injektiv: \\
+                \(\forall a_1, a_2 \in A: f(a_1) = f(a_2) = b_1 = b_2 \Leftrightarrow a_1 = a_2 \) \\
 
-        \subsubsection*{(b) \(\text{Wer Likör trinkt, hat keine Sorgen} = L \subset (M \backslash S)\)}
-            \begin{enumerate}[label=(\roman*)]
-                \item \(\text{Jeder hat Sorgen} = S = M\) Falsch
-                \item \(\text{Jemand hat Sorgen} = S \neq \emptyset\) Falsch
-                \item \(\text{Niemand hat Sorgen} = S = \emptyset\) Wahr
-            \end{enumerate}
+        \subsection*{Aufgabe 1.4}
+            Gegeben \(M \not= \emptyset \), \(S:=\{x \in M | \text{x hat Sorgen}\} \), \(L:=\{x \in M | \text{x trinkt Likör}\} \) und \(\text{Likörproduzent} \in M\)
+            \subsubsection*{(a) \(\text{Wer Sorgen hat, trinkt Likör} = S \subset L \)}
+                \begin{enumerate}[label=(\roman*)]
+                    \item \(\text{Wer Likör trinkt, hat Sorgen} = L \subset S\) Falsch
+                    \item \(\text{Wer keiene Likör trinkt, hat keine Sorgen} = M \backslash L \subset M \backslash S\) Wahr
+                    \item \(\text{Niemand hat Sorgen und trinkt keinen Likör} = S \cap (M \backslash L) = \emptyset\) Wahr
+                    \item \(\text{Jemand hat Sorgen und trinkt keinen Likör} = S \cap (M \backslash L) \not= \emptyset\) Falsch
+                    \item \(\text{Jemand trinkt Likör} = L \not= \emptyset\) Unbestimmt
+                \end{enumerate}
 
-        \subsubsection*{(c) \(\text{Trinkt niemand Likör, so haben Likörproduzenten Sorgen} = L = \emptyset \Rightarrow \text{Likörproduzent} \in S\)}
-            \begin{enumerate}[label=(\roman*)]
-                \item \(\text{Jeder trinkt Likör} = L = M\) Unbestimmt
-                \item \(\text{Jemand trinkt Likör} = L \neq \emptyset\) Wahr
-                \item \(\text{Niemand trinkt Likör} = L = \emptyset\) Falsch
-            \end{enumerate}
+            \subsubsection*{(b) \(\text{Wer Likör trinkt, hat keine Sorgen} = L \subset (M \backslash S)\)}
+                \begin{enumerate}[label=(\roman*)]
+                    \item \(\text{Jeder hat Sorgen} = S = M\) Falsch
+                    \item \(\text{Jemand hat Sorgen} = S \neq \emptyset\) Falsch
+                    \item \(\text{Niemand hat Sorgen} = S = \emptyset\) Wahr
+                \end{enumerate}
+
+            \subsubsection*{(c) \(\text{Trinkt niemand Likör, so haben Likörproduzenten Sorgen} = L = \emptyset \Rightarrow \text{Likörproduzent} \in S\)}
+                \begin{enumerate}[label=(\roman*)]
+                    \item \(\text{Jeder trinkt Likör} = L = M\) Unbestimmt
+                    \item \(\text{Jemand trinkt Likör} = L \neq \emptyset\) Wahr
+                    \item \(\text{Niemand trinkt Likör} = L = \emptyset\) Falsch
+                \end{enumerate}
 
 \end{document}
