--- a/mathematik_physiker/übung2.tex
+++ b/mathematik_physiker/übung2.tex
@@ -10,7 +10,7 @@
 
 \date{28.10.2021}
 \title{Aufgabenblatt 2, Mathematik für Physiker 1}
-\author{Finn Jannik Wagner}
+\author{Florian Adamczyk, Finn Wagner}
 
 \begin{document}
     \maketitle
