--- a/mathematik_physiker/übung3.tex
+++ b/mathematik_physiker/übung3.tex
@@ -77,7 +77,9 @@
                     \Rightarrow (1 + nx)*(1 + x) = 1 + nx + nx^2 \\
                     \Rightarrow 1 + nx + x + nx^2 \geq 1 + nx + x  \: | \: -x - nx - 1\\
                     \Rightarrow nx^2 \geq 0 \\
-                    \text{Ein Quadrat ist immer größer gleich Null}
+                    \text{Ein Quadrat ist immer größer gleich Null} \\
+                    \textbf{Da Induktionsanfang und Schritt gelten,} \\
+                    \textbf{ist die Aussage für alle natürlichen Zahlen gültig}
                 \end{gather*}
 
             \item
@@ -93,7 +95,9 @@
                     \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} * q}{1-q} - \frac{q^{n+1}*(1-q)}{1-q} \\
                     \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} * q}{1-q} - \frac{q^{n+1}- q^{n+1} * q}{1-q} \\
                     \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1-q^{n+1} * q - q^{n+1} + q^{n+1} * q}{1-q} \\
-                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1 - q^{n+1}}{1-q}
+                    \Leftrightarrow \sum_{k=0}^{n} q^k &= \frac{1 - q^{n+1}}{1-q} \\
+                    &\textbf{Da Induktionsanfang und Schritt gelten,} \\
+                    &\textbf{ist die Aussage für alle natürlichen Zahlen gültig}
                 \end{align*}
                 
             \item
@@ -103,17 +107,31 @@
                     1! = 1 = 4 * {\left( \frac{1}{2} \right) }^{1+1} = 4 * {\left( \frac{1}{2} \right)}^{2} = 1 \\
                     \textbf{Induktionsschritt} \\
                     n! \leq 4 * {\left( \frac{n}{2} \right) }^{n+1} \Rightarrow (n+1)! \leq 4 * {\left( \frac{n+1}{2} \right) }^{n+2} \\
-                    4 * { \left( \frac{n+1}{2} \right) }^{n+2} = 4 * \frac{{(n+1)}^{n+2}}{2^{n+2}} \\
-                    = 4 * \frac{{(n+1)}^{n+2}}{2^{n+2}} = 4 * \frac{{(n+1)}^{n+1} * (n+1) }{2^{n+2}} \\
-                    \text{Allgemeine binomische Formel: } {(a + b)}^{n} = \sum_{k=0}^{n} {n \choose k} a^k b^{n-k} \\
-                    = 4 * \frac{(n+1) * \sum_{k=0}^{n+1} {n+1 \choose k} a^k b^{(n+1)-k} }{2^{n+2}} \\
-                    \text{Ausklammern des letzten Elements des Summe} \\
-                    = 4 * \frac{(n+1) * ({n+1 \choose n+1} * n^{n+1} * 1 ^{(n+1)-(n+1)} + \sum_{k=0}^{n} {n+1 \choose k} a^k b^{(n+1)-k}) } {2^{n+2}} \\
+                    (n+1)! = n! * (n+1) \\
+                    \text{Verwenden der Induktionsannahme} \\
+                    \Rightarrow n! * (n+1) \leq 4 * {\left( \frac{n}{2} \right) }^{n+1} * (n + 1) \\
+                    \\
+                    \text{Als Hilfsterm: } {(1 + \frac{1}{n})}^{n+1} \geq 2 \: \: \forall \: n \in \mathbb{N} \\
+                    \text{Da gilt: }
+                    {(1 + \frac{1}{n})}^{n+1} \Rightarrow^\text{Bernoulli Ungleichung} 1 + \frac{n+1}{n}\\
+                    \frac{n+1}{n} \text{ ist immer größer gleich 1 für } n \in \mathbb{N} \text{. Dieser Wert +1 ist also größer als 2} \\
+                    \\
+                    \Rightarrow \frac{{(1 + \frac{1}{n})}^{n+1}}{2} \geq 1 \\
+                    \text{Abschätzen nach oben mit Faktor größer gleich 1} \\
+                    4 * {\left( \frac{n}{2} \right) }^{n+1} * (n + 1) \leq  4 * {\left( \frac{n}{2} \right) }^{n+1} * (n + 1) * \frac{{(1 + \frac{1}{n})}^{n+1}}{2} \\
                     \text{Vereinfachen} \\
-                    = 4 * \frac{(n+1) ( n^{n+1} + \sum_{k=0}^{n} {n+1 \choose k} a^k b^{(n+1)-k}) }{2^{n+2}} \\
-                    \text{Klammer ausmultiplizieren und 2er Exponent spalten} \\
-                    = \frac{(4 * (n+1) * n^{n+1}) + (4 * (n+1) * \sum_{k=0}^{n} {n+1 \choose k} a^k b^{(n+1)-k}) }{2^{n+1} * 2} \\
-                    Falsch nicht fertig!!!
+                    = 4 * {\left( \frac{n}{2} \right) }^{n+1} * {(1 + \frac{1}{n})}^{n+1} * \frac{(n + 1)}{2} \\
+                    \text{Vereinfachen} \\
+                    = 4 * {\left( \frac{n}{2} * {(1 + \frac{1}{n})} \right)}^{n+1} * \frac{(n + 1)}{2} \\
+                    \text{Ausmultiplizieren} \\
+                    = 4 * {\left( \frac{n}{2} + \frac{1}{2} \right)}^{n+1} * \frac{(n + 1)}{2} \\
+                    \text{Vereinfachen} \\
+                    = 4 * {\left( \frac{n+1}{2} \right)}^{n+1} * \frac{(n + 1)}{2} \\
+                    \text{Faktor einklammern} \\
+                    = 4 * {\left( \frac{n+1}{2} \right) }^{n+2} \\
+                    \text{Damit gilt der Induktionsschritt} \\
+                    \textbf{Da Induktionsanfang und Schritt gelten,} \\
+                    \textbf{ist die Aussage für alle natürlichen Zahlen gültig}
                 \end{gather*}
         \end{enumerate}
 
